# Bot_tg_vk

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: api.py  bot_tg.py  config.py  crud.py  database.py  logger.py  models.py  schemas.py  vk_bot.py
tests/: conftest.py  test_api.py
